--- a/p8105_hw6_cz2634.Rmd
+++ b/p8105_hw6_cz2634.Rmd
@@ -31,6 +31,8 @@ options(
 )
 scale_colour_discrete = scale_color_viridis_d
 scale_fill_discrete = scale_fill_viridis_d
+
+set.seed(1)
 ```
 
 ## Problem 1
@@ -104,3 +106,126 @@ models_results_df %>%
 ```
 
 ## Problem 2
+**Import and Tidy Data**
+  *`babysex:` baby’s sex (male = 1, female = 2)
+  *`frace:` father’s race (1 = White, 2 = Black, 3 = Asian, 4 = Puerto Rican, 8 = Other, 9 = Unknown)
+  *`mrace:` mother’s race (1 = White, 2 = Black, 3 = Asian, 4 = Puerto Rican, 8 = Other)
+  *`malform:` presence of malformations that could affect weight (0 = absent, 1 = present)
+  
+```{r load_tidy_data2}
+#load draft data frame
+#convert numeric to factor
+#change pounds to grams
+bw_df = read_csv("./data/birthweight.csv") %>% janitor::clean_names() %>% 
+  mutate(
+    babysex = factor(babysex, labels = c("male", "female")),
+    frace = factor(frace, levels = c(1,2,3,4,8,9), labels = c("white", "black", "asian", "puerto rican", "other", "unknown")),
+    mrace = factor(mrace, levels = c(1,2,3,4,8,9), labels = c("white", "black", "asian", "puerto rican", "other", "unknown")),
+    malform = factor(malform, labels = c("absent", "present")),
+  delwt = delwt * 453.59237,
+    ppwt = ppwt * 453.59237,
+    wtgain = wtgain * 453.59237) %>% 
+  arrange(babysex, frace)
+```
+
+```{r check_missing_data}
+#there are two ways to check for missing data
+sum(is.na(bw_df))
+which(is.na(bw_df))
+```
+
+* The dataset is consist of `r nrow(bw_df)` observations and `r ncol(bw_df)` variables, and there is `r sum(is.na(bw_df))` missing value. The numeric variable `babysex`, `frace`, `mrace`, and `malform` are converted to factor variable.
+
+**Propose a regression model for birthweight**
+
+I am interested in how factors associated with mother can affect baby's birthweight, so I will choose   
+`delwt:`(mother’s weight at delivery,   
+`mheigth:` mother’s height (inches),   
+`momage:` mother’s age at delivery (years),
+`smoken:` average number of cigarettes smoked per day during pregnancy as predictors to build linear regression model. 
+
+```{r}
+my_model = bw_df %>% 
+  lm(bwt ~ delwt + mheight + momage + smoken, data = .) %>% 
+  broom::tidy() %>% 
+  knitr::kable()
+my_model
+```
+* The results show a positive intercept of 978.977072, and the parameters of delwt, mheight, momage and smoke are 0.012720, 15.969731, 15.304540, -7.023537 respectively. The effect of these four predictors on birthweight are significant, since the P-value of all predictors are much less than 0.05.
+
+**model residuals against fitted values**
+
+```{r}
+my_model = bw_df %>% 
+  lm(bwt ~ delwt + mheight + momage + smoken, data = .) 
+plot = bw_df %>% 
+  add_predictions(my_model) %>% 
+  add_residuals(my_model) %>% 
+  rename("prediction" = pred, "residual" = resid) %>%
+  ggplot(aes(x = prediction, y = residual)) +
+    geom_point(size = 0.9, alpha = 0.5, color = "pink") +
+    labs(title = "Plot of Residual vs prediction", x="Predicted/Fitted value(grams)", y="Residual(grames)") + 
+    geom_abline(intercept = 0, slope = 0)
+plot
+```
+* we can not see obvious relationship between the residuals and the predicted values from the plot above.
+
+**Compare the three models**
+
+* model1 using length at birth and gestational age as predictors (main effects only)
+
+```{r}
+model1 = lm(bwt ~ blength + gaweeks, data = bw_df) %>% broom::tidy() %>% 
+  knitr::kable()
+model1
+```
+
+* model2 using head circumference, length, sex, and all interactions (including the three-way interaction) between these
+```{r}
+model2 = lm(bwt ~ bhead * blength * babysex, data = bw_df) %>% broom::tidy() %>% 
+  knitr::kable()
+model2
+```
+**cross validation**
+
+```{r}
+#crossv_mc() will get 500 repeated sampling, each sample has sample size as the original dataset, and create train and test data
+cv_df = 
+  crossv_mc(bw_df, 500) %>% 
+    mutate(
+        train = map(train, as.tibble),
+        test = map(test,as.tibble)
+    )  %>%
+  
+  mutate(my_model  = map(train, ~lm(bwt ~ delwt + mheight + momage + smoken, data = .x)),
+         model1  = map(train, ~lm(bwt ~ blength + gaweeks, data = .x)),
+         model2  = map(train, ~lm(bwt ~ bhead * blength * babysex, data = .x))) %>% 
+  
+  mutate(rmse_my_model = map2_dbl(my_model, test, ~rmse(model = .x, data = .y)),
+         rmse_model1 = map2_dbl(model1 , test, ~rmse(model = .x, data = .y)),
+         rmse_model2 = map2_dbl(model2, test, ~rmse(model = .x, data = .y))) 
+cv_df
+```
+
+
+```{r}
+#select interested variables 
+rmse_df = cv_df %>% 
+select(starts_with("rmse")) %>% 
+  pivot_longer(
+    everything(),
+    names_to = "model", 
+    values_to = "rmse",
+    names_prefix = "rmse_") %>%   mutate(
+    model = fct_reorder(model,rmse))
+rmse_df
+```
+
+```{r}
+plot2 = rmse_df %>% 
+  ggplot(aes(x = model, y = rmse)) + 
+    geom_violin(aes(fill = model), color = "black", alpha = .5) +
+    labs(title = "Comparisions of three models", y="RMSE value", x = "Models") 
+plot2
+```
+* From the plot, we can observe that `my_model` has greater RMSE than the other two models, and `model2` has smaller RMSE than `model1`. The results peove that prediction accuracy of `model2` is higher than the other two. The prediction accuracy of `my_model` is too low to be a good linear model. ter than `model1`. I would recommand use `model2` for  hypothetical analysis, or find a better model with higher prediction accuracy.
