--- a/p8105_hw6_cz2634.md
+++ b/p8105_hw6_cz2634.md
@@ -282,10 +282,156 @@ plot2
 ```
 
 <img src="p8105_hw6_cz2634_files/figure-gfm/unnamed-chunk-10-1.png" width="90%" style="display: block; margin: auto;" />
-\* From the plot, we can observe that `my_model` has greater RMSE than
-the other two models, and `model2` has smaller RMSE than `model1`. The
+From the plot, we can observe that `my_model` has greater RMSE than the
+other two models, and `model2` has smaller RMSE than `model1`. The
 results peove that prediction accuracy of `model2` is higher than the
 other two. The prediction accuracy of `my_model` is too low to be a good
 linear model. ter than `model1`. I would recommand use `model2` for
 hypothetical analysis, or find a better model with higher prediction
 accuracy.
+
+## Problem 3
+
+**import data**
+
+``` r
+weather_df = 
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(id, USW00094728 = "CentralPark_NY"),
+    tmin = tmin / 10,
+    tmax = tmax / 10) %>%
+  select(name, id, everything())
+```
+
+**bootstrapping** \* use bootstrap to get repeated sampling framework  
+\* focus on a simple linear regression with tmax as the response and
+tmin as the predictor
+
+``` r
+bootstrap_weather = 
+  weather_df %>%
+  bootstrap(n = 5000) %>%
+  mutate(
+    models = map(.x = strap, ~lm(tmax ~ tmin, data = .x)),
+    results = map(models, broom::glance),
+    results2 = map(models, broom::tidy)) %>% 
+  select(-strap, -models) %>% 
+  unnest(results, results2) %>% 
+  select(.id, term, r.squared,estimate) %>% 
+  mutate(
+    term = str_replace(term, "\\(", ""),
+    term = str_replace(term, "\\)", "")
+  )
+bootstrap_weather
+## # A tibble: 10,000 x 4
+##    .id   term      r.squared estimate
+##    <chr> <chr>         <dbl>    <dbl>
+##  1 0001  Intercept     0.911     7.13
+##  2 0001  tmin          0.911     1.05
+##  3 0002  Intercept     0.920     7.66
+##  4 0002  tmin          0.920     1.01
+##  5 0003  Intercept     0.927     6.87
+##  6 0003  tmin          0.927     1.06
+##  7 0004  Intercept     0.908     7.31
+##  8 0004  tmin          0.908     1.04
+##  9 0005  Intercept     0.926     7.44
+## 10 0005  tmin          0.926     1.03
+## # ... with 9,990 more rows
+```
+
+``` r
+bootstrap_weather2 = bootstrap_weather %>% 
+  pivot_wider(
+    names_from = term,
+    values_from = estimate
+  ) %>%
+  mutate(log = log(tmin * Intercept, base = exp(1))) %>%
+  select(r.squared, log)
+
+bootstrap_weather2
+## # A tibble: 5,000 x 2
+##    r.squared   log
+##        <dbl> <dbl>
+##  1     0.911  2.01
+##  2     0.920  2.05
+##  3     0.927  1.99
+##  4     0.908  2.03
+##  5     0.926  2.03
+##  6     0.908  1.99
+##  7     0.907  2.00
+##  8     0.906  2.01
+##  9     0.926  2.01
+## 10     0.909  2.01
+## # ... with 4,990 more rows
+```
+
+\*\*Construct bootstrap CI for r squared and log(β0\*β1)\*\*
+
+``` r
+bootstrap_weather2 %>% 
+  summarize(
+    r_ci_lower = quantile(r.squared, 0.025),
+    r_ci_upper = quantile(r.squared, 0.975)
+  ) %>% 
+  knitr::kable(caption = "95% CI for r square")
+```
+
+| r\_ci\_lower | r\_ci\_upper |
+| -----------: | -----------: |
+|    0.8937488 |    0.9272957 |
+
+95% CI for r square
+
+``` r
+bootstrap_weather2 %>% 
+  summarize(
+    log_ci_lower = quantile(log, 0.025),
+    log_ci_upper = quantile(log, 0.975)
+  ) %>% 
+  knitr::kable(caption = "95% CI for r square")
+```
+
+| log\_ci\_lower | log\_ci\_upper |
+| -------------: | -------------: |
+|        1.96644 |       2.058637 |
+
+95% CI for r square
+
+\*\*Ditribution of r squared and log(β0\*β1)\*\*
+
+``` r
+plot3 = bootstrap_weather2 %>% 
+  ggplot(aes(x = r.squared)) +
+    geom_density(alpha = 0.5, fill = "pink", color = "black" ) +
+    labs(title = "Distribution of r.squared", x="r.squared", y="Density") 
+plot3
+```
+
+<img src="p8105_hw6_cz2634_files/figure-gfm/unnamed-chunk-16-1.png" width="90%" style="display: block; margin: auto;" />
+
+  - The plot shows the distribution of r\_squared. It looks like normal
+    distribution. But We can observe a left tail. What is more, the
+    curve is not as smooth as normal distribution, especially in the
+    left part. The mean of r\_squared is 0.91 and the standard deviation
+    is 0.01.
+
+<!-- end list -->
+
+``` r
+plot4 = bootstrap_weather2 %>% 
+  ggplot(aes(x = log)) +
+    geom_density(alpha = 0.5, fill = "pink", color = "black" ) +
+    labs(title = "Distribution of log(β0*β1)", x="log(β0*β1)", y="Density") 
+plot4
+```
+
+<img src="p8105_hw6_cz2634_files/figure-gfm/unnamed-chunk-17-1.png" width="90%" style="display: block; margin: auto;" />
+
+  - This curve also look like normal distribution. But it has a more
+    flat peak than usual normal distibution and two long tails on both
+    sides. The mean is 2.013073, and the statdard deviation is 0.023634
